--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 img {
-	width: auto;
-	height: auto;
+	width: 300px;
+	height: 300px;
 }
 
 #temp {
@@ -32,9 +32,9 @@ img {
 #wrapper {
 	float:center;
 	margin-top:10px;
-	width: 300px;
-	height:300px;
-	background-color: ;
+	width: 100px;
+	height:250px;
+	
 	}
 	
 #temp2 {
@@ -62,6 +62,15 @@ img {
 	background-color: #efefef;
 	width: 300px;
 }
+
+#wrapper2 {
+	float:center;
+	margin-top:10px;
+	width: 100px;
+	height:250px;
+	
+	}
+
 #temp3 {
 	position: relative;
 	left:900px;
@@ -87,3 +96,12 @@ img {
 	background-color: #efefef;
 	width: 300px;
 }
+
+#wrapper3 {
+	float:center;
+	margin-top:10px;
+	width: 100px;
+	height:250px;
+	
+	}
+	
