--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,14 @@
 img {
-	width: 300px;
-	height: 300px;
+	width: auto;
+	height: 425px;
 }
 
 #temp {
 	position: relative;
-	left:900px;
-	margin-top:500px;
+	left:200px;
+	bottom:300px;
 	font-family:"Avenir", "Helvetica", sans serif;
-   	font-size:100px;	
+   	font-size:24px;	
         text-align:center;
 	background-color: #efefef;
 	width: 300px;
@@ -20,32 +20,32 @@ img {
 
 #sum {
 	position: relative;
-	left:900px;
-	margin-top:50px;
+	left:200px;
+	bottom:300px;
 	font-family:"Avenir", sans serif;
-   	font-size:50px;	
+   	font-size:24px;	
         text-align:center;
 	background-color: #efefef;
-	width: 300px;
+	width: 200px;
 }
 
 #wrapper {
 	float:center;
 	margin-top:10px;
-	width: 100px;
-	height:250px;
+	width: 350px;
+	height:425px;
 	
 	}
 	
 #temp2 {
 	position: relative;
-	left:900px;
-	margin-top:500px;
+	left:200px;
+	bottom:300px;
 	font-family:"Avenir", "Helvetica", sans serif;
-   	font-size:100px;	
+   	font-size:24px;	
         text-align:center;
 	background-color: #efefef;
-	width: 300px;
+	width: 200px;
 }
 
 .degrees:after {
@@ -54,32 +54,32 @@ img {
 
 #sum2 {
 	position: relative;
-	left:900px;
-	margin-top:50px;
+	left:200px;
+	bottom:300px;
 	font-family:"Avenir", sans serif;
-   	font-size:50px;	
+   	font-size:24px;	
         text-align:center;
 	background-color: #efefef;
-	width: 300px;
+	width: 200px;
 }
 
 #wrapper2 {
 	float:center;
 	margin-top:10px;
-	width: 100px;
-	height:250px;
+	width: 350px;
+	height:425px;
 	
 	}
 
 #temp3 {
 	position: relative;
-	left:900px;
-	margin-top:500px;
+	left:200px;
+	bottom:300px;
 	font-family:"Avenir", "Helvetica", sans serif;
-   	font-size:100px;	
-        text-align:center;
+   	font-size:24px;	
+    text-align:center;
 	background-color: #efefef;
-	width: 300px;
+	width: 200px;
 }
 
 .degrees:after {
@@ -88,20 +88,20 @@ img {
 
 #sum3 {
 	position: relative;
-	left:900px;
-	margin-top:50px;
+	left:200px;
+	bottom:300px;
 	font-family:"Avenir", sans serif;
-   	font-size:50px;	
-        text-align:center;
+   	font-size:24px;	
+    text-align:center;
 	background-color: #efefef;
-	width: 300px;
+	width: 200px;
 }
 
 #wrapper3 {
 	float:center;
-	margin-top:10px;
-	width: 100px;
-	height:250px;
+	margin-top:auto;
+	width: 350px;
+	height:425px;
 	
 	}
 	
