lanscape showing blank

--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ img {
 	height: 100vh;
 	margin: 0px;
 	padding: 0px;
-	background-color: #cbe007;
+	background-color: #f2e5d8;
 	Position: relative;
 	
 }
