owl carousel works!

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,28 @@ img {
 	width: 50px;
 	height:425px;
 	
-	}
+}
+
+#landscape {
+	height: 100vh;
+	margin: 0px;
+	padding: 0px;
+	background-color: #f2e5d8;
+	Position: relative;
+	/*top: 150px;*/
+}
+
+.title {
+	font-size: 14px;
+	color: #ffffff;
+}
+
+.owl-pagination{
+	display: none;
+}
+
+.hidden {
+	display:none;
 	
 #temp2 {
 	position: relative;
